<resources>
    <string name="app_name" translatable="false">DaznApp</string>
    <string name="title_events">Events</string>
    <string name="title_schedule">Schedule</string>
    <string name="permision_alert_dialog_explanation_message">DaznApp needs internet access to work. Please grant Internet access permision tot he application</string>
    <string name="permision_alert_dialog_explanation_title">Permission needed</string>
    <string name="image_view_content_description">Thumbnail image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="error_toast">Server error</string>
</resources>
